update config, add new notebook and script for preprocessing shp files

--- a/config/base.conf
+++ b/config/base.conf
@@ -5,7 +5,10 @@ logging {
 
 
 data {
-    path_raw_dml = ../data/01_raw/data_masked_letaba/
+    path_raw = ../data/00_raw/
+    path_raw_dml = ../data/00_raw/data_masked_letaba/
+    path_base = ../data/01_base/
+    path_base_points = ${data.path_base}points/
     path_int = ../data/02_intermediate/
     path_int_cl = ${data.path_int}clipped/
     path_int_rs = ${data.path_int}resampled/
@@ -20,6 +23,9 @@ data {
     fn_dsm = dsm.tif
     fn_dtm = dtm.tif
     fn_shp = letaba_invasives_june21_utm.shp
+    fn_shp_raw1 = letaba_invasives_june21.shp
+    fn_shp_raw2 = classification_points_wynand.shp
+    fn_shp_combined = letaba_classification_points.shp
 }
 
 preprocess {
