--- a/config/base.conf
+++ b/config/base.conf
@@ -9,20 +9,28 @@ data {
     path_raw_dml = ../data/00_raw/data_masked_letaba/
     path_base = ../data/01_base/
     path_base_points = ${data.path_base}points/
+    path_base_dsm = ${data.path_base}dsm_28cm/
+    path_base_dtm = ${data.path_base}dtm_28cm/
+    path_base_rgba = ${data.path_base}rgba_7cm/
+    path_base_rgba_rs = ${data.path_base}rgba_28cm_resampled/
+    path_base_hyps = ${data.path_base}hyps_15cm/
+    path_base_hyps_rs = ${data.path_base}hyps_28cm_resampled/
     path_int = ../data/02_intermediate/
     path_int_cl = ${data.path_int}clipped/
-    path_int_rs = ${data.path_int}resampled/
     path_int_al = ${data.path_int}aligned/
-    path_pri = ../data/03_primary/
-    path_pri_rgb = ${data.path_pri}rgb/
-    path_pri_ms = ${data.path_pri}ms/
-    path_pri_dsm = ${data.path_pri}dsm/
-    path_pri_dtm = ${data.path_pri}dtm/
-    fn_ms = ms.tif
-    fn_rgb = rgb.tif
-    fn_dsm = dsm.tif
-    fn_dtm = dtm.tif
-    fn_shp = letaba_invasives_june21_utm.shp
+    path_int_cr = ${data.path_int}cropped/
+    path_int_points = ${data.path_int}points/
+    # path_pri = ../data/03_primary/
+    # path_pri_rgb = ${data.path_pri}rgb/
+    # path_pri_ms = ${data.path_pri}ms/
+    # path_pri_dsm = ${data.path_pri}dsm/
+    # path_pri_dtm = ${data.path_pri}dtm/
+    path_rep = ../data/08_reporting/
+    fn_hyps = hyps_aoi_1.tif
+    fn_rgba = rgba_aoi_1.tif
+    fn_dsm = dsm_aoi_1.tif
+    fn_dtm = dtm_aoi_1.tif
+    # fn_shp = letaba_invasives_june21_utm.shp
     fn_shp_raw1 = letaba_invasives_june21.shp
     fn_shp_raw2 = classification_points_wynand.shp
     fn_shp_combined = letaba_classification_points.shp
