update preprocessing to include chm, pngs

--- a/config/base.conf
+++ b/config/base.conf
@@ -9,19 +9,18 @@ data {
     path_raw_dml = ../data/00_raw/data_masked_letaba/
     path_base = ../data/01_base/
     path_base_points = ${data.path_base}points/
-    path_base_dsm = ${data.path_base}dsm_28cm/
-    path_base_dtm = ${data.path_base}dtm_28cm/
+    path_base_dsm = ${data.path_base}dsm_7cm_resampled/
+    path_base_dtm = ${data.path_base}dtm_7cm_resampled/
     path_base_rgba = ${data.path_base}rgba_7cm/
-    path_base_rgba_rs = ${data.path_base}rgba_28cm_resampled/
-    path_base_hyps = ${data.path_base}hyps_15cm/
-    path_base_hyps_rs = ${data.path_base}hyps_28cm_resampled/
+    path_base_hyps = ${data.path_base}hyps_7cm_resampled/
     path_int = ../data/02_intermediate/
-    path_int_cl = ${data.path_int}clipped/
-    path_int_al = ${data.path_int}aligned/
-    path_int_cr = ${data.path_int}cropped/
+    path_int_cl = ${data.path_int}01_clipped/
+    path_int_al = ${data.path_int}02_aligned/
+    path_int_cr_tif = ${data.path_int}03_cropped_tifs/
+    path_int_cr_img = ${data.path_int}04_cropped_imgs/
     path_int_points = ${data.path_int}points/
-    # path_pri = ../data/03_primary/
-    # path_pri_rgb = ${data.path_pri}rgb/
+    path_pri = ../data/03_primary/
+    path_pri_rgb = ${data.path_pri}rgb/
     # path_pri_ms = ${data.path_pri}ms/
     # path_pri_dsm = ${data.path_pri}dsm/
     # path_pri_dtm = ${data.path_pri}dtm/
@@ -37,5 +36,5 @@ data {
 }
 
 preprocess {
-    crop_buffer = 5
+    crop_buffer = 3
 }
