update segmentation notebook, script

--- a/config/base.conf
+++ b/config/base.conf
@@ -29,6 +29,7 @@ data {
     fn_rgba = rgba_aoi_1.tif
     fn_dsm = dsm_aoi_1.tif
     fn_dtm = dtm_aoi_1.tif
+    fn_chm = chm_aoi_1.tif
     # fn_shp = letaba_invasives_june21_utm.shp
     fn_shp_raw1 = letaba_invasives_june21.shp
     fn_shp_raw2 = classification_points_wynand.shp
