update feature extraction notebook, create script

--- a/config/base.conf
+++ b/config/base.conf
@@ -21,9 +21,7 @@ data {
     path_int_points = ${data.path_int}points/
     path_pri = ../data/03_primary/
     path_pri_rgb = ${data.path_pri}rgb/
-    # path_pri_ms = ${data.path_pri}ms/
-    # path_pri_dsm = ${data.path_pri}dsm/
-    # path_pri_dtm = ${data.path_pri}dtm/
+    path_feat = ../data/04_features/
     path_rep = ../data/08_reporting/
     fn_hyps = hyps_aoi_1.tif
     fn_rgba = rgba_aoi_1.tif
@@ -34,6 +32,7 @@ data {
     fn_shp_raw1 = letaba_invasives_june21.shp
     fn_shp_raw2 = classification_points_wynand.shp
     fn_shp_combined = letaba_classification_points.shp
+    fn_feat = features.csv
 }
 
 preprocess {
