add prep_model_data.py and modelling notebook

--- a/config/base.conf
+++ b/config/base.conf
@@ -5,6 +5,7 @@ logging {
 
 
 data {
+    # Paths:
     path_raw = ../data/00_raw/
     path_raw_dml = ../data/00_raw/data_masked_letaba/
     path_base = ../data/01_base/
@@ -22,17 +23,23 @@ data {
     path_pri = ../data/03_primary/
     path_pri_rgb = ${data.path_pri}rgb/
     path_feat = ../data/04_features/
+    path_mi = ../data/05_model_input/
+    path_models = ../data/06_models/
+    path_mo = ../data/07_model_output/
     path_rep = ../data/08_reporting/
+    # Filenames:
     fn_hyps = hyps_aoi_1.tif
     fn_rgba = rgba_aoi_1.tif
     fn_dsm = dsm_aoi_1.tif
     fn_dtm = dtm_aoi_1.tif
     fn_chm = chm_aoi_1.tif
-    # fn_shp = letaba_invasives_june21_utm.shp
     fn_shp_raw1 = letaba_invasives_june21.shp
     fn_shp_raw2 = classification_points_wynand.shp
     fn_shp_combined = letaba_classification_points.shp
     fn_feat = features.csv
+    fn_train = train.npz
+    fn_test = test.npz
+    fn_val = val.npz
 }
 
 preprocess {
