major changes to preprocess, segment, adding synthetic data

--- a/config/base.conf
+++ b/config/base.conf
@@ -36,6 +36,7 @@ data {
     fn_shp_raw1 = letaba_invasives_june21.shp
     fn_shp_raw2 = classification_points_wynand.shp
     fn_shp_combined = letaba_classification_points.shp
+    fn_shp_generated = generated_points_aoi_1.shp
     fn_feat = features.csv
     fn_train = train.npz
     fn_test = test.npz
